--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -1,6 +1,6 @@
 <mat-card class="container">
   <div fxLayout="row wrap" fxLayout.lt-md="column">
-    <div class="search-box" fxFlex.gt-md="48%" fxFlex.gt-sm="98%" >
+    <div class="search-box" fxFlex.gt-md="48%"  >
       <mat-form-field>
         <input matInput [placeholder]="'Client_Component.inputPlaceholderClosedCIF'| translate"
                midasAfterValueChanged
@@ -9,7 +9,7 @@
       <mat-checkbox #showClosedAccounts labelPosition="after">{{ 'Client_Component.checkBoxShowClosedAccount'| translate}}
       </mat-checkbox>
     </div>
-    <div class="action-button" style="height: 50px;" fxFlex.gt-md="48%" fxFlex.gt-sm="98%" fxLayoutAlign="end">
+    <div class="action-button" fxFlex.gt-md="48%" fxLayout.lt-md="row" fxLayoutAlign.lt-md="space-around center" fxLayoutAlign.gt-md="end center">
       <button mat-raised-button color="primary" [routerLink]="['../', 'organization', 'bulk-import', 'Clients']" *midasHasPermission="'CREATE_CLIENT'">
         <fa-icon icon="download"></fa-icon>&nbsp;&nbsp;{{ 'Client_Component.buttonImportClient'| translate}}
       </button>
@@ -22,7 +22,7 @@
     <table class="mat-elevation-z8" mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell  *matHeaderCellDef mat-sort-header='displayName'> {{ 'Client_Component.tblColName'| translate}} </th>
+        <th mat-header-cell  *matHeaderCellDef mat-sort-header='displayName'> {{ 'Client_Component.tblColName'| translate}}</th>
         <td mat-cell *matCellDef="let row"> {{row.displayName}} </td>
       </ng-container>
 
@@ -102,7 +102,11 @@
 
       <ng-container matColumnDef="link">
         <th mat-header-cell  *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let row" [routerLink]="[row.id,'general']" [queryParams]="{ typeViewClient: 'view'}" > <i class="fa fa-eye" aria-hidden="true"></i></td>
+        <td mat-cell *matCellDef="let row"  > 
+          <button mat-mini-fab color="primary" [routerLink]="[row.id,'general']" [queryParams]="{ typeViewClient: 'view'}" 
+          
+                [matTooltip]="'ShareLabel.lblViewDetail'| translate" matTooltipPosition="above">
+            <i class="fa fa-address-card" aria-hidden="true"></i></button></td>
       </ng-container>
 
       <tr mat-header-row  *matHeaderRowDef="displayedColumns"></tr>
