fix terminal module
fix terminal module

--- a/src/main.scss
+++ b/src/main.scss
@@ -20,3 +20,4 @@ $fa-font-path:"theme/fontawesome/webfonts";
 @import "theme/fontawesome/scss/fontawesome.scss";
 @import "theme/fontawesome/scss/brands.scss";
 @import "theme/fontawesome/scss/solid.scss";
+// @import "~ngx-easy-table/style.scss";
