--- a/src/app/clients/client-stepper/client-preview-step/client-preview-step.component.html
+++ b/src/app/clients/client-stepper/client-preview-step/client-preview-step.component.html
@@ -27,7 +27,7 @@
 
   <div fxFlexFill *ngIf="client.dateOfBirth">
     <span fxFlex="40%">{{ client.legalFormId === 1 ? ('Client_Component.ClientStepper.Preview.labelDateOfBirth'|translate)  : ('Client_Component.ClientStepper.Preview.labelIncorporationDate'|translate) }}</span>
-    <span fxFlex="60%">{{ client.dateOfBirth | date }}</span>
+    <span fxFlex="60%">{{ client.dateOfBirth }}</span>
   </div>
 
   <div fxFlexFill *ngIf="client.externalId">
@@ -65,7 +65,7 @@
 
   <div fxFlexFill *ngIf="client.submittedOnDate">
     <span fxFlex="40%">{{'Client_Component.ClientStepper.Preview.labelSubmittedOnDate'|translate}}</span>
-    <span fxFlex="60%">{{ client.submittedOnDate | date }}</span>
+    <span fxFlex="60%">{{ client.submittedOnDate  }}</span>
   </div>
 
   <div fxFlexFill>
@@ -75,7 +75,7 @@
 
   <div fxFlexFill *ngIf="client.activationDate">
     <span fxFlex="40%">{{'Client_Component.ClientStepper.Preview.labelActivationDate'|translate}}</span>
-    <span fxFlex="60%">{{ client.activationDate | date }}</span>
+    <span fxFlex="60%">{{ client.activationDate }}</span>
   </div>
 
   <ng-container *ngIf="client.legalFormId === 1">
@@ -96,7 +96,7 @@
 
     <div fxFlexFill *ngIf="client.clientNonPersonDetails.incorpValidityTillDate">
       <span fxFlex="40%">{{'Client_Component.ClientStepper.Preview.labelIncorporationValidityTillDate'|translate}}</span>
-      <span fxFlex="60%">{{ client.clientNonPersonDetails.incorpValidityTillDate | date }}</span>
+      <span fxFlex="60%">{{ client.clientNonPersonDetails.incorpValidityTillDate }}</span>
     </div>
 
     <div fxFlexFill>
@@ -156,7 +156,7 @@
           {{'Client_Component.ClientStepper.Preview.labelFamilyMaritalStatus'|translate}} : {{ member.maritalStatusId | find:clientTemplate.familyMemberOptions.maritalStatusIdOptions:'id':'name' }}<br />
           {{'Client_Component.ClientStepper.Preview.labelFamilyGender'|translate}} : {{ member.genderId | find:clientTemplate.familyMemberOptions.genderIdOptions:'id':'name' }}<br />
           {{'Client_Component.ClientStepper.Preview.labelFamilyProfession'|translate}} : {{ member.professionId | find:clientTemplate.familyMemberOptions.professionIdOptions:'id':'name' }}<br />
-          {{'Client_Component.ClientStepper.Preview.labelFamilyDateOfBirth'|translate}} : {{ member.dateOfBirth | date }}<br />
+          {{'Client_Component.ClientStepper.Preview.labelFamilyDateOfBirth'|translate}} : {{ member.dateOfBirth }}<br />
         </p>
 
       </mat-expansion-panel>
