--- a/src/app/terminals/terminals.component.html
+++ b/src/app/terminals/terminals.component.html
@@ -11,7 +11,7 @@
             <mat-icon>close</mat-icon>
           </button>
         </mat-form-field>
-        
+
         <!-- <mat-checkbox #showClosedGroups labelPosition="after" (change)="changeShowClosedGroups($event.checked)">{{ 'Group_Component.labelShowClosedGroups'| translate}}</mat-checkbox> -->
       </div>
       <div class="action-button" fxLayoutGap="25px">
@@ -19,21 +19,21 @@
           <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;{{ 'Terminal_Component.btnCreate'| translate}}
         </button>
       </div>
-      
+
     </div>
-    
+
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="terminalNo">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'Terminal_Component.tableTerminal.terminalNo'| translate}} </th>
         <td mat-cell *matCellDef="let terminal"> {{ terminal.terminalId }} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="terminalCode">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>  {{ 'Terminal_Component.tableTerminal.terminalCode'| translate}} </th>
         <td mat-cell *matCellDef="let terminal"> {{ terminal.terminalCode }} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="terminalName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>  {{ 'Terminal_Component.tableTerminal.terminalName'| translate}} </th>
         <td mat-cell *matCellDef="let terminal"> {{ terminal.terminalName }} </td>
@@ -43,7 +43,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>  {{ 'Terminal_Component.tableTerminal.minFeeDefault'| translate}} </th>
         <td mat-cell *matCellDef="let terminal"> {{ terminal.minFeeDefault }} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>  {{ 'Terminal_Component.tableTerminal.status'| translate}} </th>
         <td mat-cell *matCellDef="let terminal">
@@ -52,12 +52,12 @@
             </div>
         </td>
       </ng-container>
-       
+
       <ng-container matColumnDef="createdBy">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>  {{ 'Terminal_Component.tableTerminal.createdBy'| translate}} </th>
         <td mat-cell *matCellDef="let terminal"> {{ terminal.createdBy }} </td>
       </ng-container>
-      
+
       <ng-container matColumnDef="createdDate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>  {{ 'Terminal_Component.tableTerminal.createdDate'| translate}} </th>
         <td mat-cell *matCellDef="let terminal"> {{ terminal.createdDate }} </td>
@@ -70,10 +70,9 @@
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let terminal; columns: displayedColumns;" [routerLink]="[terminal.terminalId,'edit']" class="select-row"></tr>
-  
+
     </table>
-  
-    <mat-paginator [length]="dataSource?.records$ | async" [pageSize]="10" [pageSizeOptions]="[10, 25, 50, 100]" showFirstLastButtons></mat-paginator>
-    
+
+<!--    <mat-paginator [length]="dataSource?.records$ | async" [pageSize]="10" [pageSizeOptions]="[10, 25, 50, 100]" showFirstLastButtons></mat-paginator>-->
+
   </mat-card>
-  
